--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -23,7 +23,16 @@ jobs:
         uses: peaceiris/actions-mdbook@v1
         with:
           mdbook-version: '0.5.0-beta.1'  # 建议指定一个稳定版本
-
+      - name: Prepare source directory
+        run: |
+          if [ ! -f "src/SUMMARY.md" ]; then
+            mkdir -p src
+            mv SUMMARY.md src/
+            mv README.md src/
+            mv operation-manual src/
+            mv provernet-architecture src/
+            mv user-tutorial src/
+          fi
       - name: Build with mdBook
         run: | 
             mdbook clean
