--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -1,11 +1,9 @@
-name: Deploy mdBook site to GitHub Pages
+name: Deploy mdBook site to GitHub Pages (deploy branch)
 
 on:
   push:
     branches: ["deploy"]  
   pull_request:
-  repository_dispatch:
-    types: [deploy-pages]
 
 jobs:
   deploy:
@@ -15,6 +13,7 @@ jobs:
     steps:
       - name: Sleep for 30 seconds
         run: sleep 30
+
       - name: Checkout repository
         uses: actions/checkout@v4  
 
@@ -22,10 +21,24 @@ jobs:
         uses: peaceiris/actions-mdbook@v1
         with:
           mdbook-version: '0.5.0-beta.1'
+
+      - name: Prepare source directory
+        run: |
+          if [ ! -f "src/SUMMARY.md" ]; then
+            mkdir -p src
+            mv SUMMARY.md src/
+            mv README.md src/
+            mv operation-manual src/
+            mv provernet-architecture src/
+            mv user-tutorial src/
+          fi
+
       - name: Build with mdBook
         run: | 
             mdbook clean
             mdbook build
+      - name: Copy CNAME to book directory
+        run: cp CNAME ./book/CNAME
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
