--- a/.github/workflows/sync-deploy.yml
+++ b/.github/workflows/sync-deploy.yml
@@ -110,8 +110,9 @@ jobs:
           git push origin deploy
           
           # Trigger repository dispatch event to start GitHub Pages deployment
+          # Must use PAT_TOKEN instead of GITHUB_TOKEN to trigger workflows
           curl -X POST \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
             -H "Accept: application/vnd.github.v3+json" \
             https://api.github.com/repos/${{ github.repository }}/dispatches \
             -d '{"event_type":"deploy-pages"}'
